[package]
name = "qquotes"
version = "0.1.0"
authors = ["Quentin Michel <quentinmichel69110@gmail.com>"]

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
simplelog = "^0.5.0"
log = "0.4.6"
jfs = "0.5.0"
serde = "1.0.85"
serde_derive = "1.0.85"
prettytable-rs = "^0.8"
unicode-width = "0.1"
shellexpand = "1.0"
config = "0.9.2"

[dependencies.textwrap]
version = "0.10"
features = ["term_size"]